--- a/helloworld/hooks/build
+++ b/helloworld/hooks/build
@@ -5,6 +5,7 @@ set -e
 # Use docker-in-docker (18.09.0) in order to use
 # experimental features (docker manifest):
 # Docker18 requires a different DOCKERCFG
+cp "${DOCKERFILE_PATH}" /tmp
 dpkg -l jq || apt-get install -y jq
 DOCKERAUTH=`echo ${DOCKERCFG} | jq '."https://index.docker.io/v1/".auth'`
 DOCKERCFG="{ \"auths\": { \"https://index.docker.io/v1/\": { \"auth\": "${DOCKERAUTH}" } } }"
@@ -19,7 +20,7 @@ docker18()
   -e DOCKER_HOST=unix:///var/run/docker.sock \
   -e DOCKERCFG="${DOCKERCFG}" \
   -e DOCKERCMD="${commands}" \
-  -v $(pwd)/"${DOCKERFILE_PATH}":/"${DOCKERFILE_PATH}" \
+  -v /tmp/"${DOCKERFILE_PATH}":/"${DOCKERFILE_PATH}" \
   -v $(pwd)/.docker/manifests:/root/.docker/manifests \
   -v /var/run/docker.sock:/var/run/docker.sock docker:18.09 sh -c \
     'echo "${DOCKERCFG}" > /root/.docker/config.json && \
